@@ -3,7 +3,9 @@ Release CMTK-1.1.3:
 - Added: new tool, xform2scalar, to extract scalar measures from deformation
     fields or transformations. This, in combination with "statistics" and
     "sequence" tools, obsoletes the old (and inappropriately named)
-    "deformation_field_ tool.
+    "deformation_field" tool.
+
+- Removed: obsolete "deformation_field" tool.
 
 
 Release CMTK-1.1.2 (2009-10-28):
